[gd_scene load_steps=2 format=3 uid="uid://dnemurc3qml8c"]

[ext_resource type="Script" path="res://UI/PhoneCallUI.gd" id="1_phonecallui"]

[node name="PhoneCallUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_phonecallui")

[node name="CallPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -180.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CallPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CallPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatusLabel" type="Label" parent="CallPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Incoming Call..."
horizontal_alignment = 1

[node name="CallerLabel" type="Label" parent="CallPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Agent X"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CallPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="CallPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="DenyButton" type="Button" parent="CallPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "✕ Deny"

[node name="AcceptButton" type="Button" parent="CallPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "✓ Accept"

